solved a bug on mobile footer

--- a/client/src/components/MobileFooter/MobileFooter.scss
+++ b/client/src/components/MobileFooter/MobileFooter.scss
@@ -32,4 +32,5 @@
     font-size: 14px;
     margin-top: 36px;
     font-weight: 300;
+    width: 100%;
 }
